--- a/app/community_views/comments/create.js.erb
+++ b/app/community_views/comments/create.js.erb
@@ -14,6 +14,7 @@
         else {
             comments.prepend('<%= escape_javascript( render @comment ) %>');
         }
+        comments.find('[data-remove-comment]:first').show()
     <% end %>
 
 }());
