--- a/app/frontend/stylesheets/intel/modules/_comment.scss
+++ b/app/frontend/stylesheets/intel/modules/_comment.scss
@@ -8,6 +8,9 @@
         float: left;
         width: 50px;
         margin: 0 -100% 0 0;
+        img {
+            width: 50px;
+        }
     }
 
 
