--- a/app/community_views/comments/_activity_feed_comments.html.haml
+++ b/app/community_views/comments/_activity_feed_comments.html.haml
@@ -9,10 +9,11 @@
       %p.action
         = f.submit I18n.t('activity_feed.user_status_submit'), class: 'button-a tiny'
 
-- comments =  comment.commentable.comments.order("created_at DESC").paginate(page: 1, per_page: 10)
-.comments{ "data-comments-for": comment.commentable.id }<
-  - comments.each do |comment|
-    = render 'comments/activity_feed_comment', comment: comment
+- comments =  comment.commentable.comments.order("created_at DESC").includes(:creator).paginate(page: 1, per_page: 10)
+.comments{ "data-comments-for": comment.commentable.id}<
+  - comments.each do |sub_comment|
+    - cache [user_signed_in?, current_instance.context_cache_key, sub_comment] do
+      = render 'comments/activity_feed_comment', comment: sub_comment
 
 .aligncenter
   - if comments.total_pages > comments.current_page
