--- a/app/community_views/shared/_activity_status_footer.html.haml
+++ b/app/community_views/shared/_activity_status_footer.html.haml
@@ -2,14 +2,17 @@
 
 %footer
   %p.actions
-    = link_to t(:comment), '#', data: { comment: '' }
+    - if user_signed_in?
+      = link_to t(:comment), '#', data: { comment: '' }
+    - else
+      = link_to t(:comment), new_user_session_path(return_to: request.path)
 
     - if event.is_reportable?
       %span &bull;
-      - if report = event.reported_by(current_user, request.remote_ip)
-        = link_to t(:cancel_spam_report), url_for([event, report]), remote: true, method: :delete
-      - elsif current_user
-        = link_to t(:report_as_spam), url_for([event, event.spam_reports.build]), remote: true, method: :post
-
+      - if user_signed_in?
+        = link_to t(:report_as_spam), url_for([event, event.spam_reports.build]), remote: true, method: :post, 'data-report-spam': true
+        = link_to t(:cancel_spam_report), url_for([:cancel, event, event.spam_reports.build]), remote: true, method: :delete, 'data-cancel-report': true, style: "display: none"
+      - else
+        = link_to t(:report_as_spam), new_user_session_path(return_to: request.path)
 
   = render 'comments/activity_feed_comments', comment: event.comments.build, is_active: is_active
