--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,9 +1,9 @@
-<% @comments.each do |comment| %>
-  $('[data-comments]').append('<%= escape_javascript( render comment ) %>');
-<% end %>
+<% partial = @commentable.is_a?(Project) ? 'comments/comment' : 'comments/activity_feed_comment' %>
+$('[data-comments-for=<%= @commentable.id %>]').append('<%= escape_javascript( render(partial: partial, collection: @comments, as: :comment) ) %>');
 
 <% if @comments.total_pages == @comments.current_page %>
   $('[data-load-more-comments]').replaceWith("")
 <% else %>
-  $('[data-load-more-comments]').replaceWith("<%= escape_javascript link_to t(:load_more_comments), url_for([@commentable, "comments"]), data: { remote: true, "load-more-comments": true, params: { page: params[:page].to_i + 1 }} %>")
+  $('[data-load-more-comments]').replaceWith("<%= escape_javascript link_to t(:load_more_comments), url_for([@commentable, 'comments']), data: { remote: true, "load-more-comments": true, params: { page: params[:page].to_i + 1 }} %>")
 <% end %>
+$('.content-container').trigger('next-page')
