NM-4542 fix availability datepicker

--- a/app/new_ui_views/dashboard/company/locations/_form.html.haml
+++ b/app/new_ui_views/dashboard/company/locations/_form.html.haml
@@ -18,3 +18,4 @@
 
 :javascript
   $(document).trigger('init:limiter.nearme', ['[data-add-edit-location-form] [data-counter-limit]']);
+  $(document).trigger('init:unavailability.nearme');
