--- a/app/views/layouts/_list_your_bookable.html.haml
+++ b/app/views/layouts/_list_your_bookable.html.haml
@@ -3,7 +3,7 @@
     - if current_user.nil?
       - options = {}
       - options[:role] = :seller if current_instance.split_registration?
-      = link_to_registration({return_to: transactable_type.wizard_path}.merge(options), platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal' }, class: 'nav-link btn btn-blue btn-medium') do
+      = link_to_registration({return_to: transactable_type.wizard_path}.merge(options), platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal', 'modal-overlay-close' => 'disabled' }, class: 'nav-link btn btn-blue btn-medium') do
         %span.text= t('ui.header.list_your_thing', thing: transactable_type.translated_bookable_noun)
         %span.icon.ico-plus
     - else
@@ -13,7 +13,7 @@
           %span.icon.ico-plus
   - else
     - if current_user.nil?
-      = link_to_registration({return_to: transactable_type.wizard_path}, platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal' }, class: 'nav-link dropdown-toggle') do
+      = link_to_registration({return_to: transactable_type.wizard_path}, platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal', 'modal-overlay-close' => 'disabled' }, class: 'nav-link dropdown-toggle') do
         %span.truncate= transactable_type.translated_bookable_noun
     - else
       - if transactable_type.respond_to?(:wizard_path)
