--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -8,10 +8,10 @@
           - link_to_other = nil
           - if @role == "buyer"
             - options = { role: :seller }
-            - link_to_other = link_to_registration(get_return_to_url(platform_context.transactable_types.first.wizard_path, options), platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal' }) { I18n.t("sign_up_form.link_to_seller") }
+            - link_to_other = link_to_registration(get_return_to_url(platform_context.transactable_types.first.wizard_path, options), platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal', 'modal-overlay-close' => 'disabled' }) { I18n.t("sign_up_form.link_to_seller") }
           - else
             - options = { role: :buyer }
-            - link_to_other = link_to_registration(get_return_to_url(dashboard_user_reservations_path, options), platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal' }) { I18n.t("sign_up_form.link_to_buyer") }
+            - link_to_other = link_to_registration(get_return_to_url(dashboard_user_reservations_path, options), platform_context.secured_constraint, secure_links?, data: { modal: true, 'modal-class' => 'sign-up-modal', 'modal-overlay-close' => 'disabled' }) { I18n.t("sign_up_form.link_to_buyer") }
 
           = render "registrations/#{@role}_header", link_to_other: link_to_other
 
