--- a/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
+++ b/app/new_ui_views/dashboard/company/host_reservations/_reservation.html.haml
@@ -26,8 +26,12 @@
 
     .col-xs-5
       .order-status
-        %span{class: reservation.state }
-          = t "reservations.states.#{reservation.state}"
+        - if reservation.archived_at.present? && reservation.state == 'confirmed'
+          %span{class: 'confirmed' }
+            = t("reservations.states.completed")
+        - else
+          %span{class: reservation.state }
+            = t("reservations.states.#{reservation.state}")
 
   - if reservation.can_confirm?
     .alert.alert-warning= reservation.manage_booking_status_info_new
