--- a/app/new_ui_views/dashboard/user_reservations/_reservation.html.haml
+++ b/app/new_ui_views/dashboard/user_reservations/_reservation.html.haml
@@ -13,8 +13,12 @@
 
       .col-sm-5
         .order-status
-          %span{class: reservation.state }
-            = t("reservations.states.#{reservation.state}")
+          - if reservation.archived_at.present? && reservation.state == 'confirmed'
+            %span{class: 'confirmed' }
+              = t("reservations.states.completed")
+          - else
+            %span{class: reservation.state }
+              = t("reservations.states.#{reservation.state}")
 
 
   - if reservation.state == 'unconfirmed' && !reservation.archived?
