NM-4549 payment ux improvements

--- a/app/new_ui_views/dashboard/company/payouts/edit.html.haml
+++ b/app/new_ui_views/dashboard/company/payouts/edit.html.haml
@@ -5,6 +5,11 @@
 
 - yield :payout_errors
 
+- if @payment_gateway.nil?
+  .panel
+    .panel-body
+      %p.info= t('dashboard.payouts.merchant_boarding_missing_gateway', country_code: @company.iso_country_code, currency: @company.currency )
+
 = dashboard_simple_form_for @company, url: dashboard_company_payouts_path, html: { 'data-payouts-form' => true, :'data-includes-address-field' => true } do |f|
   .panel
     .panel-body
