NM-4549 typo fix

--- a/app/views/instance_admin/settings/payments/payment_gateways/_form.html.haml
+++ b/app/views/instance_admin/settings/payments/payment_gateways/_form.html.haml
@@ -30,7 +30,7 @@
         .input-container.col-xs-6
           = f.hidden_field :type
           .row
-            %h4= "Usefull information:"
+            %h4= "Useful information:"
           .row
             %ul
               - if @payment_gateway.supports_manual_payment?
