NM-4577 fix payment test mode

--- a/app/new_ui_views/dashboard/payment_gateways/credit_cards/_credit_card.html.haml
+++ b/app/new_ui_views/dashboard/payment_gateways/credit_cards/_credit_card.html.haml
@@ -4,7 +4,7 @@
       %thead.hidden-sm.hidden-xs
         %tr
           %td
-            %p.empty-resultset= t('dashboard.items.empty', name: @payment_gateway.name.downcase)
+            %p.empty-resultset= t('dashboard.items.empty_credit_cards')
   - else
     %table.table.table-listing
       %thead.hidden-sm.hidden-xs
