--- a/app/views/dashboard/sellers/edit.html.haml
+++ b/app/views/dashboard/sellers/edit.html.haml
@@ -8,17 +8,20 @@
 
 = render 'dashboard/shared/profile_nav', active: :seller
 
-= dashboard_simple_form_for [:dashboard, @seller_profile], url: dashboard_seller_path, method: :put , as: :seller_profile, html: { class: "form-expandable" } do |f|
-  = f.simple_fields_for :properties, @seller_profile.properties do |seller_properties_form|
-    .panel
-      .panel-body
-        - @form_components.each do |form_component|
-          - form_component.form_fields.each do |form_field|
-            - model = form_field.keys.first
-            - field = form_field[model]
-            - if model == 'seller'
-              = render :partial => 'sellers/seller_form', :locals => { f: f, only_inputs: [field.to_sym], properties_form: seller_properties_form }
+= dashboard_simple_form_for [:dashboard, current_user], url: dashboard_seller_path, method: :put, html: { class: "form-expandable" } do |f|
+  = f.simple_fields_for :seller_profile do |seller_profile_form|
+    = seller_profile_form.simple_fields_for :properties, @seller_profile.properties do |seller_properties_form|
+      .panel
+        .panel-body
+          - @form_components.each do |form_component|
+            - form_component.form_fields.each do |form_field|
+              - model = form_field.keys.first
+              - field = form_field[model]
+              - if model == 'seller'
+                = render :partial => 'sellers/seller_form', :locals => { f: seller_profile_form, only_inputs: [field.to_sym], properties_form: seller_properties_form }
+              - elsif model == 'user'
+                = render :partial => 'registrations/new_attributes', :locals => { f: f, only_inputs: [field.to_sym], country: @country }
 
-    .panel.form-actions
-      .panel-body
-        = f.submit "Save"
+      .panel.form-actions
+        .panel-body
+          = f.submit "Save"
